Dev/UI (#43)
* Finish login form, not tested, found bug at backend

* bugfix: integrate test for Auth

* Login and Analysis - Backend unknown exception

* feat: DomainRegistry list uninitialized objects

* some bugs conducted

* bugfix: implement sensor/:id + add dummy notifs

* feat: fetch analysis data from BE

* Final work

* Final

* bugfix: convert PG notifications ts to string

---------
