# apps/backend/src/assets/swagger.yaml
@@ -187,6 +187,12 @@ paths:
       responses:
         '200':
           description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Notification'
         '400':
           $ref: '#/components/responses/BadRequest'
         '401':
@@ -445,6 +451,27 @@ components:
 
         location:
           $ref: '#/components/schemas/GeoLocation'
+
+    Notification:
+      type: object
+      properties:
+        id:
+          type: string
+          format: uuid
+        idOfOriginSensor:
+          $ref: '#/components/schemas/SensorId'
+        nameOfOriginSensor:
+          type: string
+          example: 'Cảm biến 1'
+        createTimestamp:
+          type: string
+          format: date-time
+        header:
+          type: string
+          example: 'Test 1'
+        content:
+          type: string
+          example: 'Test notification 1'
 
     ErrorMsg:
       type: object
